--- a/frontend/e-commerce/package.json
+++ b/frontend/e-commerce/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.4.0",
+    "chart.js": "^4.4.4",
     "mongoose": "^8.6.2",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
