--- a/frontend/e-commerce/package.json
+++ b/frontend/e-commerce/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.4.0",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "mongoose": "^8.6.2",
     "react": "^18.3.1",
